changed the twine game to a new version

--- a/twine/index.html
+++ b/twine/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <tw-story><noscript><tw-noscript>JavaScript needs to be enabled to play The Key.</tw-noscript></noscript></tw-story>
-<tw-storydata name="The Key" startnode="7" creator="Twine" creator-version="2.3.15" ifid="B024706D-8E45-4F2F-BED5-5A3E1E2044C8" zoom="1" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-tag name="not-done-yet" color="red"></tw-tag>,<tw-tag name="get-the-key" color="green"></tw-tag>,<tw-tag name="get-magic-powers" color="green"></tw-tag>,<tw-tag name="activates-game-ending-choices" color="purple"></tw-tag><tw-passagedata pid="1" name="Start Game" tags="" position="301,1" size="100,100">
+<tw-storydata name="The Key" startnode="1" creator="Twine" creator-version="2.3.15" ifid="B024706D-8E45-4F2F-BED5-5A3E1E2044C8" zoom="1" format="Harlowe" format-version="3.2.3" options="" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css"></style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-tag name="activates-game-ending-choices" color="purple"></tw-tag>,<tw-tag name="get-magic-powers" color="green"></tw-tag>,<tw-tag name="get-the-key" color="green"></tw-tag>,<tw-tag name="not-done-yet" color="red"></tw-tag><tw-passagedata pid="1" name="Start Game" tags="" position="301,1" size="100,100">
 &lt;!-- Using the Twine tool, create a hypertext game where the player takes control of a character that goes through the following stages:
 lives several days in an &quot;ordinary life&quot; - this will require a day loop in your game
 encounters something that is extraordinary somewhere in that life
@@ -19,7 +19,10 @@ there must be multiple endings to your experience
 these endings must be partially determined by player choice
 you must have custom formatting for at least 2 passages --&gt;
 
-This is the beginning of the game.  
+
+#(text-style:&quot;bold&quot;,&quot;smear&quot;)[The Key]
+
+by Molly Bridges
 
 [[Start the day]]</tw-passagedata><tw-passagedata pid="2" name=" A fork in the path" tags="" position="601,200" size="100,100">As you make your way to school, you see a new storefront on the corner of your street.  There is no sign on the door, so you don&#39;t know what kind of business it could be.  This storefront wasn&#39;t here yesterday (today?), but now it almost seems to call out to you from your place on the sidewalk.  Your fellow commuters push past you as you examine this new building, paying it no mind.  It&#39;s almost as if no one can see it except for you.
 
