--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -34,7 +34,7 @@
         <img class="img-fluid" src="./midtermImage.jpeg">
       </div>
       <div class="col-6">
-        This is my description paragraph.
+        My midterm project was a collaborative board game for 4 players.  You are playing as cats trying to escape their owner’s apartment.  The object of the game is to build an escape rig and leave the house before the human notices your disruption and foils your plan.
       </div>
       <div class="col-2">
         <a class="btn btn-primary btn-block" href="./midtermRules.pdf" role="button">PLAY</a>
@@ -42,13 +42,13 @@
     </div>
   </div>
   <div class="card">
-    <div class="card-header h3">Hypertext Fiction: YOUR TITLE HERE</div>
+    <div class="card-header h3">Hypertext Fiction: The Key</div>
     <div class="card-body row">
       <div class="col-4">
         <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
       </div>
       <div class="col-6">
-        REPLACE THIS WITH YOUR DESCRIPTION PARAGRAPH
+        This interactive fiction game follows a person through a repeating day cycle where everything seems to go wrong.  When they find a key on the ground, it may be the key to their salvation (or the harbinger of chaos...)
       </div>
       <div class="col-2">
         <a class="btn btn-primary btn-block" href="../twine/index.html" role="button">PLAY</a>
