updated more code

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>GAME 601 Portfolio (Fall 2021)</title>
   <meta name="description" content="What I made in GAME 601 (Game Programming) at American University in Fall 2021">
-  <meta name="author" content="YOUR NAME">
+  <meta name="author" content="Molly Bridges">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
@@ -45,7 +45,7 @@
     <div class="card-header h3">Hypertext Fiction: The Key</div>
     <div class="card-body row">
       <div class="col-4">
-        <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
+        <img class="img-fluid" src="./twineImage.png">
       </div>
       <div class="col-6">
         This interactive fiction game follows a person through a repeating day cycle where everything seems to go wrong.  When they find a key on the ground, it may be the key to their salvation (or the harbinger of chaos...)
@@ -56,13 +56,13 @@
     </div>
   </div>
   <div class="card">
-    <div class="card-header h3">Interactive Fiction: YOUR TITLE HERE</div>
+    <div class="card-header h3">Interactive Fiction: The House</div>
     <div class="card-body row">
       <div class="col-4">
-        <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
+        <img class="img-fluid" src="./informImage.png">
       </div>
       <div class="col-6">
-        REPLACE THIS WITH YOUR DESCRIPTION PARAGRAPH
+        This piece of interactive fiction uses Inform 7 to tell the story of a person who is trapped in a deeply unsettling house.  Pursued by a suit of armor, they must find the key to the front door and make it out of the house before it's too late.
       </div>
       <div class="col-2">
         <a class="btn btn-primary btn-block" href="../inform/play.html" role="button">PLAY</a>
