more code updates

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -20,7 +20,7 @@
         <img class="img-fluid" src="YOUR IMAGE HERE">
       </div>
       <div class="col-6">
-        REPLACE THIS WITH YOUR DESCRIPTION PARAGRAPH
+        This game modification attempts to improve on the simple game of flipping a coin.  Players compete to acquire points by flipping a coin either into their hand or into a box; after a minute, the person with the highest score wins.
       </div>
       <div class="col-2">
         <a class="btn btn-primary btn-block" href="./gameModification.pdf" role="button">PLAY</a>
@@ -73,10 +73,10 @@
     <div class="card-header h3">Programming with p5js</div>
     <div class="card-body row">
       <div class="col-4">
-        <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
+        <img class="img-fluid" src="./p5Image.png">
       </div>
       <div class="col-6">
-        REPLACE THIS WITH YOUR DESCRIPTION PARAGRAPH
+        This p5 digital art piece uses arrays and loops to create a series of hot air balloons and clouds, which peacefully float across the screen.  The hot air balloons and clouds have their respective hue and size adjusted based on their posiiton in their array.
       </div>
       <div class="col-2">
         <a class="btn btn-primary btn-block" href="../p5/index.html" role="button">PLAY</a>
