een more code stuff, also added game mod image

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,7 +17,7 @@
     <div class="card-header h3">Game Modification: Matching Pennies</div>
     <div class="card-body row">
       <div class="col-4">
-        <img class="img-fluid" src="YOUR IMAGE HERE">
+        <img class="img-fluid" src="gameModImage.png">
       </div>
       <div class="col-6">
         This game modification attempts to improve on the simple game of flipping a coin.  Players compete to acquire points by flipping a coin either into their hand or into a box; after a minute, the person with the highest score wins.
