added image, fixed typo, added final description

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -76,7 +76,7 @@
         <img class="img-fluid" src="./p5Image.png">
       </div>
       <div class="col-6">
-        This p5 digital art piece uses arrays and loops to create a series of hot air balloons and clouds, which peacefully float across the screen.  The hot air balloons and clouds have their respective hue and size adjusted based on their posiiton in their array.
+        This p5 digital art piece uses arrays and loops to create a series of hot air balloons and clouds, which peacefully float across the screen.  The hot air balloons and clouds have their respective hue and size adjusted based on their position in their array.
       </div>
       <div class="col-2">
         <a class="btn btn-primary btn-block" href="../p5/index.html" role="button">PLAY</a>
@@ -84,13 +84,13 @@
     </div>
   </div>
   <div class="card">
-    <div class="card-header h3">(Final) Digital Game: YOUR TITLE HERE</div>
+    <div class="card-header h3">(Final) Digital Game: Hot Air Balloon Adventure</div>
     <div class="card-body row">
       <div class="col-4">
-        <img class="img-fluid" src="./YOUR_IMAGE_FILENAME">
+        <img class="img-fluid" src="./balloonFinal.png">
       </div>
       <div class="col-6">
-        REPLACE THIS WITH YOUR DESCRIPTION PARAGRAPH
+        This final digital game allows you to play as a hot air balloon soaring through the sky.  Dodge obstacles and avoid lightning strikes with the help of your friends in order to make it to the hot air balloon festival in one piece!
       </div>
       <div class="col-2">
         <a class="btn btn-primary btn-block" href="../final/index.html" role="button">PLAY</a>
